included error handling and refactored category and place models